# pico-AS5600

./: CMakeLists.txt  LICENSE  README.md  main.cpp
lib/AS5600/: AS5600.cpp  AS5600.h  AS5600_Templates.tpp
